--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ button{
 }
 .qr-box img{
   width:260px;
-  display:none;
+  display:block;
+  margin: 10px auto;
   border-radius:12px;
 }
 .note{
@@ -171,10 +172,14 @@ button:active {
 🟢 Someone purchased Weekly Pass
   
 </div>
-  <audio id="clickSound" src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3"></audio>
-  <button id="orderBtn" onclick="playClick(); sendOrder();">
-  <audio id="clickSound" src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3"></audio>
-  <audio id="successSound" src="https://assets.mixkit.co/active_storage/sfx/1116/1116-preview.mp3"></audio>
+  <!-- SOUNDS -->
+<audio id="clickSound" src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3"></audio>
+<audio id="successSound" src="https://assets.mixkit.co/active_storage/sfx/1116/1116-preview.mp3"></audio>
+
+<!-- ORDER BUTTON -->
+<button id="orderBtn" onclick="playClick(); sendOrder();">
+  Order After Payment
+</button>
 <button id="orderBtn" onclick="playClick(); sendOrder();">
   Order After Payment
 </button>
