--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@ body {
   color: #fff;
   overflow-x: hidden;
 }
-
-
-.container{
-  max-width:420px;
-  margin:auto;
-  padding:20px;
+.container {
+  max-width: 420px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 24px;
 }
 h1{
   text-align:center;
@@ -32,28 +31,33 @@ input,select,button{
   width:100%;
   padding:12px;
   margin:8px 0;
-  border-radius:12px;
+  border-radius: 14px;
   border:none;
   font-size:15px;
 }
+  input {
+  background-clip: padding-box;
+}
+ 
 button{
   background:#2ecc71;
   font-weight:bold;
   cursor:pointer;
 }
-.qr-box{
-  text-align:center;
-  margin-top:15px;
-}
+.qr-box {
+  width: 100%;
+  text-align: center;
 
-#qrImage{
-  width:220px;
-  max-width:90%;
-  margin:10px auto;
-  border-radius:12px;
-  background:#fff;
-  padding:10px;
-  display:none;
+#qrImage {
+  width: 220px;
+  max-width: 100%;
+  display: block;
+  margin: 12px auto;
+  padding: 12px;
+  background: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 .note{
   font-size:13px;
