--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ const storeRef = doc(db, "store", "store");
   const btn = document.getElementById("orderBtn");
   if (!btn) return;
 
-  if (status === "closed") {
+  if (false) {
     btn.disabled = true;
     btn.innerText = "Store Closed";
     btn.style.opacity = "0.6";
