--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ button:active {
 <audio id="successSound" src="https://assets.mixkit.co/active_storage/sfx/1116/1116-preview.mp3"></audio>
 
   
-<button id="orderBtn"
+<button id="orderBtn" type="button"
   onclick="playClick(); sendOrder();"
   style="position: relative; z-index: 10;">
   Order After Payment
