--- a/index.html
+++ b/index.html
@@ -174,7 +174,12 @@ button:active {
   inputmode="numeric"
   maxlength="10"
 >
-
+<input
+  type="email"
+  id="email"
+  placeholder="Email (auto-filled from Google)"
+  readonly
+>
 <select id="pack" onchange="updateQR()">
   <option value="">Select Pack</option>
 
@@ -241,7 +246,11 @@ function playSuccess() {
   document.getElementById("successSound").play();
 }
 </script>
-
+<div id="authBox" style="text-align:center; margin-bottom:12px;">
+  <button id="loginBtn">Sign in with Google</button>
+  <button id="logoutBtn" style="display:none;">Logout</button>
+  <p id="userInfo" style="font-size:13px;"></p>
+</div>
 <button id="orderBtn" type="button" style="position: relative; z-index: 10;">
   Order After Payment
 </button>
@@ -294,6 +303,11 @@ function updateQR() {
 
 <script>
 function sendOrder() {
+  const user = auth.currentUser;
+if (!user) {
+  alert("Please sign in with Google to place an order");
+  return;
+}
   const playerID = document.getElementById("playerID").value.trim();
   const serverID = document.getElementById("serverID").value.trim();
   const mobile   = document.getElementById("mobile").value.trim();
@@ -309,13 +323,16 @@ function sendOrder() {
   document.getElementById("processingBox").style.display = "block";
 
   // ✅ DEFINE FIRST
+  const email = auth.currentUser.email;
   const subject = encodeURIComponent("MLBB Order Confirmation");
   const body = encodeURIComponent(
     "Order ID: " + orderId +
     "\nPlayer ID: " + playerID +
     "\nServer ID: " + serverID +
     "\nMobile: " + mobile +
+    "\nEmail: " + email +
     "\n\nPlease confirm my payment."
+    
   );
 
   // ✅ OPEN GMAIL — MUST BE IMMEDIATE
@@ -333,7 +350,14 @@ function sendOrder() {
   <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-
+import {
+  getAuth,
+  GoogleAuthProvider,
+  signInWithPopup,
+  signOut,
+  onAuthStateChanged
+} from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    
 const firebaseConfig = {
   apiKey: "AIzaSyB7ZS8S879-gQFikWUyq4y0rDja7DzboK",
   authDomain: "everyday-store-6debb.firebaseapp.com",
@@ -344,10 +368,47 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+window.auth = auth;
+const provider = new GoogleAuthProvider();
 const db = getFirestore(app);
 const storeRef = doc(db, "store", "store");
 
+// GOOGLE LOGIN
+document.getElementById("loginBtn").onclick = async () => {
+  try {
+    await signInWithPopup(auth, provider);
+  } catch (e) {
+    alert("Google login failed");
+  }
+};
 
+// LOGOUT
+document.getElementById("logoutBtn").onclick = async () => {
+  await signOut(auth);
+};
+
+// AUTH STATE CHANGE
+onAuthStateChanged(auth, (user) => {
+  const emailInput = document.getElementById("email");
+
+  if (user) {
+    document.getElementById("loginBtn").style.display = "none";
+    document.getElementById("logoutBtn").style.display = "inline-block";
+    document.getElementById("userInfo").innerText =
+      "Logged in as: " + user.email;
+
+    // ✅ AUTO FILL EMAIL
+    emailInput.value = user.email;
+  } else {
+    document.getElementById("loginBtn").style.display = "inline-block";
+    document.getElementById("logoutBtn").style.display = "none";
+    document.getElementById("userInfo").innerText = "";
+
+    // ❌ CLEAR EMAIL ON LOGOUT
+    emailInput.value = "";
+  }
+});
 </script>
   <!-- LIVE BUYERS SCRIPT -->
 <script>
