--- a/index.html
+++ b/index.html
@@ -78,17 +78,19 @@ button{
   overflow: hidden;
   box-sizing: border-box;
 }
+/* 🔥 FORCE SIGN IN BUTTON TO BE CLICKABLE */
+#topAuth,
+#topAuth * {
+  pointer-events: auto !important;
+  position: relative;
+  z-index: 100000;
+}
+
+/* ❌ Disable clicks ONLY on banner images, not containers */
 .slider img,
 .top-banner img,
 header img {
   pointer-events: none;
-}
-#topAuth {
-  pointer-events: auto;
-  position: fixed;
-  top: 12px;
-  left: 12px;
-  z-index: 9999;
 }
 
 #topAuth button {
