--- a/index.html
+++ b/index.html
@@ -380,11 +380,12 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebas
 import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 import {
   getAuth,
-  GoogleAuthProvider,
-  signInWithRedirect,
-  getRedirectResult,
-  signOut,
-  onAuthStateChanged
+GoogleAuthProvider,
+signInWithRedirect,
+signInWithPopup,
+getRedirectResult,
+signOut,
+onAuthStateChanged
 } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     
 const firebaseConfig = {
@@ -401,7 +402,19 @@ const firebaseConfig = {
  window.auth = auth;
  const provider = new GoogleAuthProvider();
 function doGoogleLogin() {
-  signInWithRedirect(auth, provider);
+  const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
+
+  if (isMobile) {
+    signInWithRedirect(auth, provider);
+  } else {
+    signInWithPopup(auth, provider)
+      .then((result) => {
+        console.log("Popup login success:", result.user.email);
+      })
+      .catch((error) => {
+        console.error("Popup login error:", error);
+      });
+  }
 }
 
  getRedirectResult(auth)
